fixed white spaces issue

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-    margin: 0;
     padding: 0;
+    margin: 0;
     font-family: 'Indie Flower', cursive;
 }
 .header{
@@ -122,6 +122,7 @@ nav .fa{
 /*---- Why a website -----*/
 
 .Website{
+    padding: 1px 0px;
     background-color: #48d2fe;
     background-position: center;
     background-size: cover;
@@ -179,6 +180,7 @@ p{
 /*klankfakak*/
 
 .pictures{
+    padding: 1px 0px;
     width: 100%;
     margin:auto;
     padding-top: 50px;
